welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: value unary_! is not a member of Int
	return (!cigars < 41 && (!isWeekend && cigars >60)) 
                ^